<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clickable="true"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="@dimen/hubsan_common_dialog_width_size"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:layout_gravity="center"
        android:orientation="vertical" >


        <!--title-->
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/hubsan_common_dialog_height_size"
            android:gravity="center" >

            <TextView
                android:id="@+id/dialogTittleTxt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:gravity="center|left"
                android:textColor="@color/white"
                android:textSize="@dimen/text_fourteen" />

            <ImageView
                android:id="@+id/dialogCancel"
                android:layout_width="30px"
                android:layout_height="30px"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="12px"
                android:background="@drawable/common_dialog_top_btn_bg"
                android:contentDescription="@null"
                android:visibility="gone" />
        </RelativeLayout>

        <!--message-->
        <ScrollView
            android:id="@+id/content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/message"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:lineSpacingMultiplier="1.5"
                android:paddingLeft="10px"
                android:minHeight="300px"
                android:paddingBottom="15px"
                android:textColor="@color/white"
                android:textSize="@dimen/text_twelve" />
        </ScrollView>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:src="#676b65" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/hubsan_common_dialog_height_size"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/negativeButton"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/hubsan_501_common_btn_bg"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/hubsan_common_dialog_title_text_size" />


            <ImageView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:src="#676b65" />

            <Button
                android:id="@+id/positiveButton"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/hubsan_501_common_btn_bg"
                android:gravity="center"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:textSize="@dimen/hubsan_common_dialog_title_text_size" />
        </LinearLayout>

        <ImageView
            android:id="@+id/hubsanCommDialogBottomLine"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:src="#676b65"
            android:visibility="gone" />

    <LinearLayout
        android:id="@+id/hubsanCommDialogBottomLay"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/hubsan_common_dialog_height_size"
        android:layout_gravity="bottom"
        android:visibility="gone"
        android:gravity="center"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/hubsanCommDialogDeleteSubmit"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/hubsan_501_common_btn_bg"
            android:gravity="center"
            android:text="@string/hubsan_mission_dialog_delete_submit"
            android:textColor="@color/white"
            android:textSize="@dimen/hubsan_common_dialog_title_text_size" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>